--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,11 +8,11 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".CekTagihanActivity">
+        <activity android:name=".activity.CekTagihanActivity">
 
         </activity>
         <activity
-            android:name=".SebelumLoginActivity"
+            android:name=".activity.SebelumLoginActivity"
             android:label="@string/title_activity_sebelum_login"
             android:theme="@style/AppTheme.NoActionBar">
 
@@ -24,7 +24,7 @@
         </activity>
 
         <activity
-            android:name=".SeteahLoginActivity"
+            android:name=".activity.SeteahLoginActivity"
             android:label="@string/title_activity_seteah_login"
             android:theme="@style/AppTheme.NoActionBar">
 
