--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,5 +41,9 @@ dependencies {
     compile 'com.facebook.stetho:stetho:1.3.1'
     compile 'org.springframework.android:spring-android-rest-template:2.0.0.M3'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.7'
+    compile 'com.google.firebase:firebase-core:9.4.0'
+    compile 'com.google.firebase:firebase-messaging:9.4.0'
 
 }
+
+apply plugin: 'com.google.gms.google-services'
