--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,12 @@
             </intent-filter>
         </service>
 
+        <service android:name=".services.RegistrasiFcmService">
+            <intent-filter>
+                <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
+            </intent-filter>
+        </service>
+
         <service
             android:name=".services.FcmHandlerService">
             <intent-filter>
